name:                hs-libp2p-crypto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/hs-libp2p-crypto#readme
license:             Apache-2.0
license-file:        LICENSE
author:              CMCDragonkai
maintainer:          roger.qiu@matrix.ai
copyright:           Copyright: (c) 2017 Roger Qiu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.LibP2P.Key
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       cryptonite,
                       secp256k1,
                       protocol-buffers,
                       hprotoc
  default-language:    Haskell2010

test-suite hs-libp2p-crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-libp2p-crypto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/hs-libp2p-crypto
